--- a/.github/workflows/duckdefender.yaml
+++ b/.github/workflows/duckdefender.yaml
@@ -1,5 +1,5 @@
 env:
-  docker_tag: schalla/test:dev-0.0.7
+  docker_tag: schalla/duckdefender-v2:dev-0.0.73
 
 # This is a basic workflow to help you get started with GitHub Actions 
 name: FlyingDuck Scan
